--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     <select id="storeSelect">
         <option value="">-- Select Store --</option>
-        <option value="store-01">Store 01 - 123 Main St, Cityville</option>
-        <option value="store-02">Store 02 - 456 Elm St, Townsville</option>
-        <option value="store-03">Store 03 - 789 Oak St, Villagetown</option>
+        <option value="Store 01">Store 01 - 123 Main St, Cityville</option>
+        <option value="Store 02">Store 02 - 456 Elm St, Townsville</option>
+        <option value="Store 03">Store 03 - 789 Oak St, Villagetown</option>
     </select>
 
     <div>
