--- a/index.html
+++ b/index.html
@@ -29,9 +29,28 @@
 
     <select id="storeSelect">
         <option value="">-- Select Store --</option>
-        <option value="Store 01">Store 01 - 123 Main St, Cityville</option>
-        <option value="Store 02">Store 02 - 456 Elm St, Townsville</option>
-        <option value="Store 03">Store 03 - 789 Oak St, Villagetown</option>
+        <option value="Store 01">Store 01 - 2820 South 84th Street, Omaha, NE</option>
+        <option value="Store 02">Store 02 - 3302 North 90th Street, Omaha, NE</option>
+        <option value="Store 04">Store 04 - 921 Galvin Road, Bellevue, NE</option>
+        <option value="Store 06">Store 06 - 4805 South 97th Street, Omaha, NE</option>
+        <option value="Store 07">Store 07 - 707 North 120th Street, Omaha, NE</option>
+        <option value="Store 09">Store 09 - 715 West Broadway, Councilbluffs, IA</option>
+        <option value="Store 10">Store 10 - 789 Oak St, Villagetown</option>
+        <option value="Store 11">Store 11 - 789 Oak St, Villagetown</option>
+        <option value="Store 12">Store 12 - 789 Oak St, Villagetown</option>
+        <option value="Store 14">Store 14 - 789 Oak St, Villagetown</option>
+        <option value="Store 15">Store 15 - 789 Oak St, Villagetown</option>
+        <option value="Store 16">Store 16 - 789 Oak St, Villagetown</option>
+        <option value="Store 17">Store 17 - 789 Oak St, Villagetown</option>
+        <option value="Store 18">Store 18 - 789 Oak St, Villagetown</option>
+        <option value="Store 19">Store 19 - 789 Oak St, Villagetown</option>
+        <option value="Store 21">Store 21 - 789 Oak St, Villagetown</option>
+        <option value="Store 22">Store 22 - 789 Oak St, Villagetown</option>
+        <option value="Store 23">Store 23 - 789 Oak St, Villagetown</option>
+        <option value="Store 24">Store 24 - 789 Oak St, Villagetown</option>
+        <option value="Store 25">Store 25 - 789 Oak St, Villagetown</option>
+        <option value="Store 26">Store 26 - 789 Oak St, Villagetown</option>
+        <option value="Store 27">Store 27 - 789 Oak St, Villagetown</option>
     </select>
 
     <div>
