--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
         <option value="Store 04">Store 04 - 921 Galvin Road, Bellevue, NE</option>
         <option value="Store 06">Store 06 - 4805 South 97th Street, Omaha, NE</option>
         <option value="Store 07">Store 07 - 707 North 120th Street, Omaha, NE</option>
-        <option value="Store 09">Store 09 - 715 West Broadway, Councilbluffs, IA</option>
-        <option value="Store 10">Store 10 - 789 Oak St, Villagetown</option>
-        <option value="Store 11">Store 11 - 789 Oak St, Villagetown</option>
-        <option value="Store 12">Store 12 - 789 Oak St, Villagetown</option>
-        <option value="Store 14">Store 14 - 789 Oak St, Villagetown</option>
-        <option value="Store 15">Store 15 - 789 Oak St, Villagetown</option>
-        <option value="Store 16">Store 16 - 789 Oak St, Villagetown</option>
-        <option value="Store 17">Store 17 - 789 Oak St, Villagetown</option>
-        <option value="Store 18">Store 18 - 789 Oak St, Villagetown</option>
-        <option value="Store 19">Store 19 - 789 Oak St, Villagetown</option>
-        <option value="Store 21">Store 21 - 789 Oak St, Villagetown</option>
-        <option value="Store 22">Store 22 - 789 Oak St, Villagetown</option>
-        <option value="Store 23">Store 23 - 789 Oak St, Villagetown</option>
-        <option value="Store 24">Store 24 - 789 Oak St, Villagetown</option>
-        <option value="Store 25">Store 25 - 789 Oak St, Villagetown</option>
-        <option value="Store 26">Store 26 - 789 Oak St, Villagetown</option>
-        <option value="Store 27">Store 27 - 789 Oak St, Villagetown</option>
+        <option value="Store 09">Store 09 - 715 West Broadway, Council Bluffs, IA</option>
+        <option value="Store 10">Store 10 - 245 East Military, Fremont, NE</option>
+        <option value="Store 11">Store 11 - 8200 Parkview Blvd, LaVista, NE</option>
+        <option value="Store 12">Store 12 - 2010 Harney Street, Omaha, NE</option>
+        <option value="Store 14">Store 14 - 2845 South 168th Street, Omaha, NE</option>
+        <option value="Store 15">Store 15 - 5405 South 144th Street, Omaha, NE</option>
+        <option value="Store 16">Store 16 - 15737 West Dodge Road, Omaha, NE</option>
+        <option value="Store 17">Store 17 - 4901 L Street, Omaha, NE</option>
+        <option value="Store 18">Store 18 - 5115 North 108th Street, Omaha, NE</option>
+        <option value="Store 19">Store 19 - 16755 Monroe Street, Omaha, NE</option>
+        <option value="Store 21">Store 21 - 11501 South 42nd Street, Bellevue, NE</option>
+        <option value="Store 22">Store 22 - 15445 Spaulding Plaza, Omaha, NE</option>
+        <option value="Store 23">Store 23 - 1412 North 203rd Terrace, Elkhorn, NE</option>
+        <option value="Store 24">Store 24 - 4805 South 97th Street, Omaha, NE</option>
+        <option value="Store 25">Store 25 - 5430 Red Rock Lane, Lincoln, NE</option>
+        <option value="Store 26">Store 26 - 2733 North 83rd Street, Lincoln, NE</option>
+        <option value="Store 27">Store 27 - 18507 Oakmont Drive, Omaha, NE</option>
     </select>
 
     <div>
@@ -69,7 +69,7 @@
     </script>
 
     <footer>
-        Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
+        Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
     </footer>
 </div>
 
