--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         }
         select, button {
             padding: 15px;
-            font-size: 16px;
+            font-size: 20px;
             margin: 10px;
-            width: 80%;
+            width: 100%;
             max-width: 400px;
+            text-align: center;
         }
     </style>
 </head>
