--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             margin: 18px;
             width: 90%;
             max-width: 750px;
+            min-height: 60px;
             text-align: center;
         }
     </style>
