--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             min-height: 60px;
             text-align: center;
         }
+        @media (max-width: 600px) {
+    select, button {
+        font-size: 34px;
+        padding: 20px;
+        line-height: 3.5;
+        min-height: 120px;
+}
     </style>
 </head>
 <body>
