--- a/index.html
+++ b/index.html
@@ -8,21 +8,42 @@
         .container {
             text-align: center;
         }
-        select, button {
-            padding: 15px;
-            font-size: 18px;
-            margin: 10px;
-            width: 90%;
-            max-width: 650px;
-            min-height: 60px;
-            text-align: center;
-        }
-        @media (max-width: 600px) {
-    select, button {
-        font-size: 34px;
+        
+        select {
+    padding: 20px;
+    font-size: 20px;
+    margin: 10px;
+    width: 90%;
+    max-width: 650px;
+    min-height: 70px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+@media (max-width: 600px) {
+    select {
+        font-size: 36px;
         padding: 30px;
-        line-height: 2.5;
-        min-height: 120px;
+        min-height: 130px;
+    }
+}
+
+button {
+    padding: 15px;
+    font-size: 18px;
+    margin: 10px;
+    width: 90%;
+    max-width: 650px;
+    min-height: 60px;
+    text-align: center;
+    border-radius: 8px;
+}
+
+@media (max-width: 600px) {
+    button {
+        font-size: 28px;
+        padding: 25px;
+        min-height: 100px;
     }
 }
     </style>
