--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     font-size: 20px;
     margin: 10px;
     width: 90%;
-    max-width: 650px;
-    min-height: 45px;
+    max-width: 550px;
+    min-height: 70px;
     text-align: center;
     border-radius: 10px;
 }
@@ -25,6 +25,8 @@
         font-size: 48px;
         padding: 15px;
         min-height: 260px;
+        text-align: center;
+        border-radius: 10px;
     }
 }
 
@@ -33,8 +35,8 @@ button {
     font-size: 18px;
     margin: 10px;
     width: 90%;
-    max-width: 650px;
-    min-height: 60px;
+    max-width: 550px;
+    min-height: 45px;
     text-align: center;
     border-radius: 8px;
 }
@@ -44,6 +46,7 @@ button {
         font-size: 28px;
         padding: 25px;
         min-height: 100px;
+        border-radius: 10px;
     }
 }
     </style>
