--- a/index.html
+++ b/index.html
@@ -3,53 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jensen Tire & Auto Onboarding</title>
-    <link rel="stylesheet" href="shared-style.css">
-    <style>
-        .container {
-            text-align: center;
-        }
-        
-        select {
-    padding: 20px;
-    font-size: 20px;
-    margin: 10px;
-    width: 90%;
-    max-width: 550px;
-    min-height: 70px;
-    text-align: center;
-    border-radius: 10px;
-}
-
-@media (max-width: 600px) {
-    select {
-        font-size: 48px;
-        padding: 15px;
-        min-height: 260px;
-        text-align: center;
-        border-radius: 10px;
-    }
-}
-
-button {
-    padding: 15px;
-    font-size: 18px;
-    margin: 10px;
-    width: 90%;
-    max-width: 550px;
-    min-height: 45px;
-    text-align: center;
-    border-radius: 8px;
-}
-
-@media (max-width: 600px) {
-    button {
-        font-size: 28px;
-        padding: 25px;
-        min-height: 100px;
-        border-radius: 10px;
-    }
-}
-    </style>
+    <link rel="stylesheet" href="shared_style.css">
 </head>
 <body>
 
