--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jensen Tire & Auto Onboarding</title>
-    <link rel="stylesheet" href="shared_style.css">
+    <link rel="stylesheet" href="shared-style.css">
 </head>
 <body>
 
