--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <div class="container">
     <h1>Welcome to Jensen Tire & Auto Onboarding</h1>
+    <p class="subheading">We’re excited to have you on board!</p>
     <p>Please select your store location from the list below:</p>
 
     <select id="storeSelect">
@@ -36,7 +37,7 @@
         <option value="Store 21">Store 21 - 11501 South 42nd Street, Bellevue, NE</option>
         <option value="Store 22">Store 22 - 15445 Spaulding Plaza, Omaha, NE</option>
         <option value="Store 23">Store 23 - 1412 North 203rd Terrace, Elkhorn, NE</option>
-        <option value="Store 24">Store 24 - 4805 South 97th Street, Omaha, NE</option>
+        <option value="Store 24">Store 24 - 11342 South 96th Street, Papillion, NE</option>
         <option value="Store 25">Store 25 - 5430 Red Rock Lane, Lincoln, NE</option>
         <option value="Store 26">Store 26 - 2733 North 83rd Street, Lincoln, NE</option>
         <option value="Store 27">Store 27 - 18507 Oakmont Drive, Omaha, NE</option>
