--- a/index.html
+++ b/index.html
@@ -12,43 +12,67 @@
     <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
 </header>
 
-<div class="container">
-    <h1>Welcome to Jensen Tire & Auto Onboarding</h1>
-    <p class="subheading">We’re excited to have you on board!</p>
-    <p>Please select your store location from the list below:</p>
+<!-- First Scroll Section -->
+<section id="onboarding">
+    <div class="container">
+        <h1>Welcome to Jensen Tire & Auto Onboarding</h1>
+        <p class="subheading">We’re excited to have you on board!</p>
+        <p>Please select your store location from the list below:</p>
 
-    <select id="storeSelect">
-        <option value="">-- Select Store --</option>
-        <option value="Store 01">Store 01 - 2820 South 84th Street, Omaha, NE</option>
-        <option value="Store 02">Store 02 - 3302 North 90th Street, Omaha, NE</option>
-        <option value="Store 04">Store 04 - 921 Galvin Road, Bellevue, NE</option>
-        <option value="Store 06">Store 06 - 4805 South 97th Street, Omaha, NE</option>
-        <option value="Store 07">Store 07 - 707 North 120th Street, Omaha, NE</option>
-        <option value="Store 09">Store 09 - 715 West Broadway, Council Bluffs, IA</option>
-        <option value="Store 10">Store 10 - 245 East Military, Fremont, NE</option>
-        <option value="Store 11">Store 11 - 8200 Parkview Blvd, LaVista, NE</option>
-        <option value="Store 12">Store 12 - 2010 Harney Street, Omaha, NE</option>
-        <option value="Store 14">Store 14 - 2845 South 168th Street, Omaha, NE</option>
-        <option value="Store 15">Store 15 - 5405 South 144th Street, Omaha, NE</option>
-        <option value="Store 16">Store 16 - 15737 West Dodge Road, Omaha, NE</option>
-        <option value="Store 17">Store 17 - 4901 L Street, Omaha, NE</option>
-        <option value="Store 18">Store 18 - 5115 North 108th Street, Omaha, NE</option>
-        <option value="Store 19">Store 19 - 16755 Monroe Street, Omaha, NE</option>
-        <option value="Store 21">Store 21 - 11501 South 42nd Street, Bellevue, NE</option>
-        <option value="Store 22">Store 22 - 15445 Spaulding Plaza, Omaha, NE</option>
-        <option value="Store 23">Store 23 - 1412 North 203rd Terrace, Elkhorn, NE</option>
-        <option value="Store 24">Store 24 - 11342 South 96th Street, Papillion, NE</option>
-        <option value="Store 25">Store 25 - 5430 Red Rock Lane, Lincoln, NE</option>
-        <option value="Store 26">Store 26 - 2733 North 83rd Street, Lincoln, NE</option>
-        <option value="Store 27">Store 27 - 18507 Oakmont Drive, Omaha, NE</option>
-    </select>
+        <select id="storeSelect">
+            <option value="">-- Select Store --</option>
+            <option value="Store 01">Store 01 - 2820 South 84th Street, Omaha, NE</option>
+            <option value="Store 02">Store 02 - 3302 North 90th Street, Omaha, NE</option>
+            <option value="Store 04">Store 04 - 921 Galvin Road, Bellevue, NE</option>
+            <option value="Store 06">Store 06 - 4805 South 97th Street, Omaha, NE</option>
+            <option value="Store 07">Store 07 - 707 North 120th Street, Omaha, NE</option>
+            <option value="Store 09">Store 09 - 715 West Broadway, Council Bluffs, IA</option>
+            <option value="Store 10">Store 10 - 245 East Military, Fremont, NE</option>
+            <option value="Store 11">Store 11 - 8200 Parkview Blvd, LaVista, NE</option>
+            <option value="Store 12">Store 12 - 2010 Harney Street, Omaha, NE</option>
+            <option value="Store 14">Store 14 - 2845 South 168th Street, Omaha, NE</option>
+            <option value="Store 15">Store 15 - 5405 South 144th Street, Omaha, NE</option>
+            <option value="Store 16">Store 16 - 15737 West Dodge Road, Omaha, NE</option>
+            <option value="Store 17">Store 17 - 4901 L Street, Omaha, NE</option>
+            <option value="Store 18">Store 18 - 5115 North 108th Street, Omaha, NE</option>
+            <option value="Store 19">Store 19 - 16755 Monroe Street, Omaha, NE</option>
+            <option value="Store 21">Store 21 - 11501 South 42nd Street, Bellevue, NE</option>
+            <option value="Store 22">Store 22 - 15445 Spaulding Plaza, Omaha, NE</option>
+            <option value="Store 23">Store 23 - 1412 North 203rd Terrace, Elkhorn, NE</option>
+            <option value="Store 24">Store 24 - 11342 South 96th Street, Papillion, NE</option>
+            <option value="Store 25">Store 25 - 5430 Red Rock Lane, Lincoln, NE</option>
+            <option value="Store 26">Store 26 - 2733 North 83rd Street, Lincoln, NE</option>
+            <option value="Store 27">Store 27 - 18507 Oakmont Drive, Omaha, NE</option>
+        </select>
 
-    <button onclick="goToStore()">Continue</button>
+        <button onclick="goToStore()">Continue</button>
 
-    <footer>
-        Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
-    </footer>
-</div>
+        <footer>
+            Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
+        </footer>
+    </div>
+</section>
+
+<!-- Second Scroll Section (Map) -->
+<section id="map-section">
+    <div class="map-container">
+        <h2>Find a Jensen Tire & Auto Near You</h2>
+        <iframe 
+            src="https://www.google.com/maps/d/u/0/embed?mid=13H401zF09wNVb68O4KURw1F6qGcd4Xo&ehbc=2E312F" 
+            width="100%" 
+            height="400" 
+            style="border:0;" 
+            allowfullscreen 
+            loading="lazy">
+        </iframe>
+    </div>
+
+    <!-- Footer Image Placeholder -->
+    <div class="footer-image-placeholder">
+        <!-- Swap with your image when ready -->
+        <img src="placeholder-footer.jpg" alt="Jensen Website Banner Placeholder" style="max-height:80px; width:100%; object-fit:cover;">
+    </div>
+</section>
 
 <script>
     function goToStore() {
