--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Footer Image Placeholder -->
     <div class="footer-image-placeholder">
         <!-- Swap with your image when ready -->
-        <img src="placeholder-footer.jpg" alt="Jensen Website Banner Placeholder" style="max-height:80px; width:100%; object-fit:cover;">
+        <img src="page.jpg" alt="Jensen Website Banner Placeholder" style="max-height:80px; width:100%; object-fit:cover;">
     </div>
 </section>
 
