--- a/index.html
+++ b/index.html
@@ -52,24 +52,44 @@
         </footer>
     </div>
 </section>
+    
+<section>
+  <div class="container">
+    <h1>“Quality means doing it right when no one is looking.”</h1>
+    <p class="subheading">– Henry Ford</p>
+  </div>
+</section>
 
-<!-- Second Scroll Section (Map) -->
-<section id="map-section">
-    <div class="map-container">
-        <h2>Find a Jensen Tire & Auto Near You</h2>
-        <iframe 
-            src="https://www.google.com/maps/d/u/0/embed?mid=13H401zF09wNVb68O4KURw1F6qGcd4Xo&ehbc=2E312F" 
-            width="100%" 
-            height="400" 
-            style="border:0;" 
-            allowfullscreen 
-            loading="lazy">
-        </iframe>
+<section>
+  <div class="container accordion">
+    <h1>New Hire FAQ</h1>
+
+    <div class="accordion-item">
+      <button onclick="toggleAccordion(this)">Do I have login information already?</button>
+      <div class="accordion-content">Most of the training links will have the proper credentials, if not please contact support.</div>
     </div>
 
-    <!-- Footer Image Placeholder -->
+    <div class="accordion-item">
+      <button onclick="toggleAccordion(this)">How do I access training materials?</button>
+      <div class="accordion-content">After selecting your store, you’ll be directed to a role-specific training hub.</div>
+    </div>
+
+    <div class="accordion-item">
+      <button onclick="toggleAccordion(this)">Who do I contact with issues?</button>
+      <div class="accordion-content">Reach out to Jensen Support at support@jensentireandauto.com.</div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h1>We value your input!</h1>
+    <a class="button" href="https://forms.microsoft.com/your-feedback-form-url" target="_blank">Leave Feedback</a>
+  </div>
+</section>
+    
+<section>
     <div class="footer-image-placeholder">
-        <!-- Swap with your image when ready -->
         <img src="page.jpg" alt="Jensen Website Banner Placeholder" style="max-height:80px; width:100%; object-fit:cover;">
     </div>
 </section>
