--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       </div>
     </section>
   </div>
-    
+
+<Main>    
 <section>
   <div class="container">
     <h1>“Quality means doing it right when no one is looking.”</h1>
@@ -95,7 +96,8 @@
         <img src="page.jpg" alt="Jensen Website Banner Placeholder" style="max-height:80px; width:100%; object-fit:cover;">
     </div>
 </section>
-
+</Main>
+    
 <script>
     function goToStore() {
         const store = document.getElementById('storeSelect').value;
