--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
 </div>
 
-<section id="details" class="scrollable-section">
+<section id="details" class="tall-section">
   <div class="container">
     <h1>“Quality means doing it right when no one is looking.”</h1>
     <p class="subheading">– Henry Ford</p>
