--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <div class="snap-container">
     <section id="onboarding" class="snap-section">
+       <header>
+            <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
+        </header>
         <div class="container">
             <h1>Welcome to Jensen Tire & Auto Onboarding</h1>
             <p class="subheading">We’re excited to have you on board!</p>
