--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 </header>
 
 <div class="snap-container">
-    <section id="onboarding" class="snap-section">
+   <section id="onboarding" class="snap-section">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Jensen Tire & Auto Onboarding</title>
+        <link rel="stylesheet" href="shared-style.css" />
+    </head>
        <header>
             <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
         </header>
