--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 </head>
 <body>
 
-<header>
-    <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
-</header>
-
-<div class="snap-container">
-   <section id="onboarding" class="snap-section">
-        <div class="container">
-            <h1>Welcome to Jensen Tire & Auto Onboarding</h1>
-            <p class="subheading">We’re excited to have you on board!</p>
-            <p>Please select your store location from the list below:</p>
-
+<section class="snap-section">
+    <header>
+        <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
+    </header>
+    <div class="container">
+        <h1>Welcome to Jensen Tire & Auto Onboarding</h1>
+        <p class="subheading">We’re excited to have you on board!</p>
+        <p>Please select your store location from the list below:</p>
+        
             <select id="storeSelect">
                 <option value="">-- Select Store --</option>
                 <option value="Store 01">Store 01 - 2820 South 84th Street, Omaha, NE</option>
