--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<section class="snap-section">
+<section class="section">
     <header>
         <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
     </header>
