--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <button onclick="goToStore()">Continue</button>
 
             <footer>
-                Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
+                FAQs below. any further questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
             </footer>
         </div>
     </section>
