--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <button onclick="goToStore()">Continue</button>
 
             <footer>
-                FAQs below. any further questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
+                FAQs below. Further questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
             </footer>
         </div>
     </section>
@@ -85,6 +85,7 @@
         Submit
       </button>
     </form>
+    <p id="thank-you" style="display: none; color: white; margin-top: 20px;">Thank you for your feedback!</p>
   </div>
 
   <div class="quote-footer">
