--- a/index.html
+++ b/index.html
@@ -110,5 +110,26 @@ function toggleAccordion(button) {
     if (!isOpen) content.style.display = 'block';
 }
 </script>
+    <script>
+      document.getElementById("feedback-form").addEventListener("submit", async function (e) {
+        e.preventDefault();
+        const feedback = document.getElementById("feedback").value;
+    
+        const response = await fetch("https://default4e006550b51242c29ec2b301c0fa6a.51.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/5a8c354b3a634ab893a5879f150f715d/triggers/manual/paths/invoke/?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=Jr-fRt0XwxxcfPUPvbpjS-xwfZlb2rjb4J_L2xwhXFg", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ feedback })
+        });
+
+        if (response.ok) {
+          alert("Thank you for your feedback!");
+          document.getElementById("feedback").value = "";
+        } else {
+          alert("Submission failed. Please try again.");
+        }
+      });
+</script>
 </body>
 </html>
