--- a/Store 01/select-role.html
+++ b/Store 01/select-role.html
@@ -13,6 +13,7 @@
 </header>
 
 <div class="container">
+  <section id="role">
     <h1>Select Your Role - Store 01</h1>
     <p>Please choose your position to continue to the appropriate training.</p>
 
@@ -22,6 +23,7 @@
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
     </footer>
+  </section>
 </div>
 
 </body>
