--- a/Store 02/manager.html
+++ b/Store 02/manager.html
@@ -12,7 +12,8 @@
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
 </header>
 
-<div class="container">
+<section id="role">
+  <div class="container">
     <h1>Manager Training - Store 02</h1>
     <p>Welcome to your custom training page.</p>
 
@@ -22,7 +23,8 @@
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
     </footer>
-</div>
-
+  </div>
+</section>
+    
 </body>
 </html>
