--- a/Store 19/manager.html
+++ b/Store 19/manager.html
@@ -12,8 +12,9 @@
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
 </header>
 
-<div class="container">
-    <h1>Manager Training - Store 01</h1>
+<section id="role">
+  <div class="container">
+    <h1>Manager Training - Store 19</h1>
     <p>Welcome to your custom training page.</p>
 
     <a class="button" href="#">Sample Training Link 1</a>
@@ -22,7 +23,8 @@
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
     </footer>
-</div>
+  </div>
+</section>
 
 </body>
 </html>
