--- a/Store 15/select-role.html
+++ b/Store 15/select-role.html
@@ -11,8 +11,9 @@
 <header>
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
 </header>
-
-<div class="container">
+    
+<section id="role">
+  <div class="container">
     <h1>Select Your Role - Store 15</h1>
     <p>Please choose your position to continue to the appropriate training.</p>
 
@@ -22,7 +23,8 @@
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
     </footer>
-</div>
+  </div>
+</section>
 
 </body>
 </html>
