--- a/Store 22/select-role.html
+++ b/Store 22/select-role.html
@@ -12,8 +12,9 @@
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
 </header>
 
-<div class="container">
-    <h1>Select Your Role - Store 01</h1>
+<section id="role">
+  <div class="container">
+    <h1>Select Your Role - Store 22</h1>
     <p>Please choose your position to continue to the appropriate training.</p>
 
     <a class="button" href="manager.html">Manager</a>
@@ -22,7 +23,8 @@
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
     </footer>
-</div>
+  </div>
+</section>
 
 </body>
 </html>
