--- a/Store 10/tech.html
+++ b/Store 10/tech.html
@@ -12,7 +12,8 @@
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
 </header>
 
-<div class="container">
+<section id="role">    
+ <div class="container">
     <h1>Technician Training - Store 10</h1>
     <p>Welcome to your custom training page.</p>
 
@@ -22,7 +23,8 @@
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
     </footer>
-</div>
+  </div>
+</section>
 
 </body>
 </html>
