--- a/Store 02/manager.html
+++ b/Store 02/manager.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Manager Training | Store 02</title>
     <link rel="stylesheet" href="../shared-style.css">
