--- a/Store 10/select-role.html
+++ b/Store 10/select-role.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Select Role | Store 10</title>
     <link rel="stylesheet" href="../shared-style.css">
