--- a/Store 07/manager.html
+++ b/Store 07/manager.html
@@ -18,8 +18,10 @@
     <h1>Manager Training - Store 07</h1>
     <p>Welcome to your custom training page.</p>
 
+  <div class="role-buttons">    
     <a class="button" href="#">Sample Training Link 1</a>
     <a class="button" href="#">Sample Training Link 2</a>
+  </div>
 
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
