--- a/Store 23/tech.html
+++ b/Store 23/tech.html
@@ -18,9 +18,11 @@
     <h1>Technician Training - Store 23</h1>
     <p>Welcome to your custom training page.</p>
 
+  <div class="role-buttons">    
     <a class="button" href="#">Sample Training Link 1</a>
     <a class="button" href="#">Sample Training Link 2</a>
-
+  </div>
+     
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
     </footer>
