--- a/Store 07/select-role.html
+++ b/Store 07/select-role.html
@@ -18,8 +18,10 @@
     <h1>Select Your Role - Store 07</h1>
     <p>Please choose your position to continue to the appropriate training.</p>
 
+  <div class="role-buttons">    
     <a class="button" href="manager.html">Manager</a>
     <a class="button" href="tech.html">Technician</a>
+  </div>
 
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
