--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,6 +5,28 @@
     <meta charset="UTF-8">
     <title>Manager Training | Store 01</title>
     <link rel="stylesheet" href="../shared-style.css">
+    <style>
+        .credentials {
+            background: #fff;
+            color: #333;
+            padding: 15px;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            font-size: 16px;
+            word-wrap: break-word;
+        }
+        .credentials p {
+            margin: 5px 0;
+        }
+        .credentials code {
+            background: #f4f4f4;
+            padding: 4px 6px;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
 
@@ -18,16 +39,35 @@
     <h1>Manager Training - Store 01</h1>
     <p>Welcome to your custom training page.</p>
 
-  <div class="role-buttons">    
-    <a class="button" href="#">Sample Training Link 1</a>
-    <a class="button" href="#">Sample Training Link 2</a>
-  </div>
-      
+    <div class="role-buttons">
+        <a class="button" href="https://engage360training.com" target="_blank">Conti (Engage360)</a>
+        <div class="credentials">
+            <p><strong>Username:</strong> <code>store01@jensentire.com</code></p>
+            <p><strong>Password:</strong> <code>Welcome2024!</code></p>
+        </div>
+
+        <a class="button" href="https://www.thegoodyearlearningcenter.com/" target="_blank">Goodyear</a>
+        <div class="credentials">
+            <p><strong>Username:</strong> <code>store01.gy@jensentire.com</code></p>
+            <p><strong>Password:</strong> <code>Goodyear2024!</code></p>
+        </div>
+
+        <a class="button" href="https://go.team1bg.com/" target="_blank">BG Training</a>
+        <div class="credentials">
+            <p><em>Credentials coming soon</em></p>
+        </div>
+
+        <a class="button" href="https://www.youtube.com/watch?v=dN11zcwkbxA&list=PLZjmO5pvmh7TNPAngksyF8c25jk7x-wiw" target="_blank">TireWorks YouTube Playlist</a>
+        <div class="credentials">
+            <p><em>Credentials coming soon</em></p>
+        </div>
+    </div>
+
     <footer>
         Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
     </footer>
   </div>
 </section>
-    
+
 </body>
 </html>
