--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../shared-style.css">
     <style>
         .credentials {
-            background: #fff;
+            background: #000;
             color: #333;
             padding: 15px;
             margin-top: 10px;
