--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -21,7 +21,7 @@
             margin: 5px 0;
         }
         .credentials code {
-            background: #f4f4f4;
+            background: #000;
             padding: 4px 6px;
             border-radius: 4px;
             font-size: 16px;
