--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -26,6 +26,16 @@
             border-radius: 4px;
             font-size: 16px;
         }
+        .copy-btn {
+            margin-top: 10px;
+            padding: 8px 12px;
+            font-size: 14px;
+            background: #F97526;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -69,5 +79,14 @@
   </div>
 </section>
 
+<script>
+function copyCreds(user, pass) {
+    const text = `Username: ${user}\nPassword: ${pass}`;
+    navigator.clipboard.writeText(text).then(() => {
+        alert("Credentials copied to clipboard!");
+    });
+}
+</script>
+    
 </body>
 </html>
