--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -19,7 +19,7 @@
     <p>Welcome to your custom training page.</p>
 
   <div class="role-buttons">    
-    <a class="button" href="#">Sample Training Link 1</a>
+    <a class="button" href="Conti.html">Continental Training</a>
     <a class="button" href="#">Sample Training Link 2</a>
   </div>
 
